present update/remove/buy updated
