# api/presents/presents.router.js
@@ -1,16 +1,37 @@
 const { Router } = require('express');
 const presentsController = require('./presents.controller');
 const LoginController = require('../auth/login.controller');
-const {imageUploader} = require('./uploadImage');
-
+const { imageUploader } = require('./uploadImage');
 
 const router = Router();
 
-
-router.post('/addPresent', LoginController.authorize, imageUploader, presentsController.addPresent, presentsController.validPresent);
-router.post('/buyPresent/:presentId',  presentsController.buyPresent);
-router.delete('/:presentId', LoginController.authorize, presentsController.removePresent);
-router.patch('/update',LoginController.authorize, presentsController.updatePresent)
-router.get('/:userId', LoginController.authorize, presentsController.getAllPresentsChild)
+router.post(
+  '/',
+  LoginController.authorize,
+  imageUploader,
+  presentsController.addPresentValidation,
+  presentsController.addPresent,
+);
+router.patch(
+  '/buy/:presentId',
+  LoginController.authorize,
+  presentsController.buyPresent,
+);
+router.delete(
+  '/:presentId',
+  LoginController.authorize,
+  presentsController.removePresent,
+);
+router.patch(
+  '/:presentId',
+  LoginController.authorize,
+  presentsController.updatePresentValidation,
+  presentsController.updatePresent,
+);
+router.get(
+  '/',
+  LoginController.authorize,
+  presentsController.getAllPresentsChild,
+);
 
 module.exports = router;
